# python_tradingbot_framework

./: .env.example  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: aitools.md
docs/architecture/: database-models.md  overview.md  utils-layout.md
docs/examples/: example-bots.md  ta-regime-bot.md
docs/guides/: ai-tools.md
helm/tradingbots/: values.yaml
helm/tradingbots/templates/: cronjob.yaml  portfolio-worth-cronjob.yaml
tradingbot/: aideepseektoolbot.py  aihedgefundbot.py  calculate_portfolio_worth.py  earningsinsidertiltbot.py  eurusdtreebot.py  feargreedbot.py  gptbasedstrategytabased.py  onetime_benchmarkBuyHold.py  regimeadaptivebot.py  sharpeportfoliooptweekly.py  swingtitaniumbot.py  ta_regime_bot.py  xauaisyntheticmetalbot.py  xauzenbot.py
tradingbot/utils/: __init__.py  aitools.py  backtest.py  botclass.py  data_service.py  db.py  earnings_insider.py  historic_repository.py  hyperparameter_tuning.py  portfolio_manager.py  portfolio_opt.py  regime.py  sentiment.py  settings.py  stock_fundamentals_loader.py  ta_regime.py  typical_stock_universe.py
tradingbot/utils/ai/: __init__.py
tradingbot/utils/core/: __init__.py
tradingbot/utils/data/: __init__.py
tradingbot/utils/portfolio/: __init__.py
